--- a/Exercises/state_space/state_space_exercise.ipynb
+++ b/Exercises/state_space/state_space_exercise.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# data loading\n",
     "\n",
-    "folder = os.path.join('..','Datasets', 'CascadedTanks')  #change path according to the location of your csv file \n",
+    "folder = os.path.join('..','..','Datasets', 'CascadedTanks')  #change path according to the location of your csv file \n",
     "file = os.path.join(folder, 'dataBenchmark.csv') \n",
     "dataset = pd.read_csv(file)\n",
     "print('\\n Dataset info: \\n')\n",
@@ -99,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "augmentedgpt"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
