state space small fix

--- a/Exercises/state_space/state_space_exercise.ipynb
+++ b/Exercises/state_space/state_space_exercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural State Space \n",
+    "# Deep learning for state-space identification\n",
     "## Application to identification of cascaded tanks system\n",
     "\n",
     "### Course on Deep Learning for System Identification\n",
