updated state space

--- a/Exercises/state_space/state_space_exercise.ipynb
+++ b/Exercises/state_space/state_space_exercise.ipynb
@@ -53,21 +53,30 @@
    "source": [
     "# data loading\n",
     "\n",
-    "folder = os.path.join('..','..','Datasets', 'CascadedTanks')  #change path according to the location of your csv file \n",
-    "file = os.path.join(folder, 'dataBenchmark.csv') \n",
+    "folder = os.path.join(\n",
+    "    \"..\", \"..\", \"Datasets\", \"CascadedTanks\"\n",
+    ")  # change path according to the location of your csv file\n",
+    "file = os.path.join(folder, \"dataBenchmark.csv\")\n",
     "dataset = pd.read_csv(file)\n",
-    "print('\\n Dataset info: \\n')\n",
+    "print(\"\\n Dataset info: \\n\")\n",
     "\n",
     "\n",
     "# rename the columns in training and test sequences (we typically call validation set the one used to tune algorithms' hyper-parameters)\n",
-    "dataset = dataset.rename(columns = {'uEst': 'u_train', 'uVal': 'u_test', 'yEst': 'y_train', 'yVal': 'y_test', })\n",
+    "dataset = dataset.rename(\n",
+    "    columns={\n",
+    "        \"uEst\": \"u_train\",\n",
+    "        \"uVal\": \"u_test\",\n",
+    "        \"yEst\": \"y_train\",\n",
+    "        \"yVal\": \"y_test\",\n",
+    "    }\n",
+    ")\n",
     "print(dataset)\n",
     "\n",
-    "u_train = torch.tensor(dataset['u_train'], dtype=torch.float32)\n",
-    "y_train = torch.tensor(dataset['y_train'], dtype=torch.float32)\n",
+    "u_train = torch.tensor(dataset[\"u_train\"], dtype=torch.float32)\n",
+    "y_train = torch.tensor(dataset[\"y_train\"], dtype=torch.float32)\n",
     "\n",
-    "u_test = torch.tensor(dataset['u_test'], dtype=torch.float32)\n",
-    "y_test = torch.tensor(dataset['y_test'], dtype=torch.float32)"
+    "u_test = torch.tensor(dataset[\"u_test\"], dtype=torch.float32)\n",
+    "y_test = torch.tensor(dataset[\"y_test\"], dtype=torch.float32)"
    ]
   },
   {
@@ -76,15 +85,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scaling \n",
-    "u_mean = torch.mean(u_train); u_std = torch.std(u_train) \n",
-    "y_mean = torch.mean(y_train); y_std = torch.std(y_train)  \n",
+    "# scaling\n",
+    "u_mean = torch.mean(u_train)\n",
+    "u_std = torch.std(u_train)\n",
+    "y_mean = torch.mean(y_train)\n",
+    "y_std = torch.std(y_train)\n",
     "\n",
-    "u_train = (u_train-u_mean)/u_std\n",
-    "u_test = (u_test-u_mean)/u_std\n",
+    "u_train = (u_train - u_mean) / u_std\n",
+    "u_test = (u_test - u_mean) / u_std\n",
     "\n",
-    "y_train = (y_train-y_mean)/y_std\n",
-    "y_test = (y_test-y_mean)/y_std"
+    "y_train = (y_train - y_mean) / y_std\n",
+    "y_test = (y_test - y_mean) / y_std"
    ]
   },
   {
