--- a/Exercises/state_space/playground.ipynb
+++ b/Exercises/state_space/playground.ipynb
@@ -16,90 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Taken from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/simulator.py\n",
-    "\n",
-    "class StateSpaceSimulator(nn.Module):\n",
-    "    r\"\"\" Discrete-time state-space simulator.\n",
-    "\n",
-    "    Args:\n",
-    "        f_xu (nn.Module): The neural state-space model.\n",
-    "        batch_first (bool): If True, first dimension is batch.\n",
-    "\n",
-    "    Inputs: x_0, u\n",
-    "        * **x_0**: tensor of shape :math:`(N, n_{x})` containing the\n",
-    "          initial hidden state for each element in the batch.\n",
-    "          Defaults to zeros if (h_0, c_0) is not provided.\n",
-    "        * **input**: tensor of shape :math:`(L, N, n_{u})` when ``batch_first=False`` or\n",
-    "          :math:`(N, L, n_{x})` when ``batch_first=True`` containing the input sequence\n",
-    "\n",
-    "    Outputs: x\n",
-    "        * **x**: tensor of shape :math:`(L, N, n_{x})` corresponding to\n",
-    "          the simulated state sequence.\n",
-    "\n",
-    "    Examples::\n",
-    "\n",
-    "        >>> ss_model = NeuralStateSpaceModel(n_x=3, n_u=2)\n",
-    "        >>> nn_solution = StateSpaceSimulator(ss_model)\n",
-    "        >>> x0 = torch.randn(64, 3)\n",
-    "        >>> u = torch.randn(100, 64, 2)\n",
-    "        >>> x = nn_solution(x0, u)\n",
-    "        >>> print(x.size())\n",
-    "        torch.Size([100, 64, 3])\n",
-    "     \"\"\"\n",
-    "\n",
-    "    def __init__(self, f_xu, batch_first=True):\n",
-    "        super().__init__()\n",
-    "        self.f_xu = f_xu\n",
-    "        self.batch_first = batch_first\n",
-    "\n",
-    "    def forward(self, x_0, u):\n",
-    "        x_step = x_0\n",
-    "        dim_time = 1 if self.batch_first else 0\n",
-    "        x = []\n",
-    "        for u_step in u.split(1, dim=dim_time):  # split along the time axis\n",
-    "            u_step = u_step.squeeze(dim_time)\n",
-    "            x += [x_step]\n",
-    "            dx = self.f_xu(x_step, u_step)\n",
-    "            x_step = x_step + dx\n",
-    "\n",
-    "        x = torch.stack(x, dim_time)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "class StateSpaceSimulatorBasic(nn.Module):\n",
-    "    def __init__(self, f_xu, batch_first=True):\n",
-    "        super().__init__()\n",
-    "        self.f_xu = f_xu\n",
-    "        self.batch_first = batch_first\n",
-    "\n",
-    "    def forward(self, x_0, u):\n",
-    "        B, n_x = x_0.shape\n",
-    "        _, T, _ = u.shape # B, T, n_u\n",
-    "        x = torch.empty((B, T, n_x))\n",
-    "        x_step = x_0\n",
-    "        for t in range(T):  # split along the time axis\n",
-    "            x[:, [t], :] = x_step\n",
-    "            dx = self.f_xu(x_step, u[:, t, :])\n",
-    "            x_step = x_step + dx\n",
-    "\n",
-    "        return x\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Taken from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/models.py\n",
+    "# Adapted from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/models.py\n",
     "class NeuralStateUpdate(nn.Module):\n",
     "\n",
     "    def __init__(self, n_x=2, n_u=1, n_feat=32):\n",
@@ -129,10 +46,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class NeuralOutput(nn.Module):\n",
+    "\n",
+    "    def __init__(self, n_x, n_y, n_feat=32):\n",
+    "        super(NeuralOutput, self).__init__()\n",
+    "        \n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(n_x, n_feat),\n",
+    "            nn.Tanh(),\n",
+    "            nn.Linear(n_feat, n_y),\n",
+    "        )\n",
+    "                    \n",
+    "    def forward(self, x):\n",
+    "        y = self.net(x)\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StateSpaceSimulator(nn.Module):\n",
+    "    def __init__(self, f_xu):\n",
+    "        super().__init__()\n",
+    "        self.f_xu = f_xu\n",
+    "\n",
+    "    def forward(self, x_0, u):\n",
+    "        B, n_x = x_0.shape\n",
+    "        _, T, _ = u.shape # B, T, n_u\n",
+    "        x = torch.empty((B, T, n_x))\n",
+    "        x_step = x_0\n",
+    "\n",
+    "        # manually unroll f_xu over time\n",
+    "        for t in range(T): \n",
+    "            x[:, t, :] = x_step\n",
+    "            dx = self.f_xu(x_step, u[:, t, :])\n",
+    "            x_step = x_step + dx\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_x = 2; n_u = 1;\n",
+    "f_xu = NeuralStateUpdate(n_x, n_u, n_feat=32)\n",
+    "simulator = StateSpaceSimulator(f_xu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B, T = 32, 1024; \n",
+    "batch_x0 = torch.zeros((B, n_x))\n",
+    "batch_u = torch.randn((B, T, n_u)) # replace with actual training input\n",
+    "batch_x_sim = simulator(batch_x0, batch_u) # B, T, n_x \n",
+    "batch_x_sim.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Overall, we have defined a sort of custom RNN. In fact, it behaves pretty much like a standard LSTM\n",
+    "lstm = torch.nn.RNN(input_size=n_u, hidden_size=n_x, batch_first=True, num_layers=1)\n",
+    "batch_h, _ = lstm(batch_u)\n",
+    "batch_h.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#batch_h = lstm(batch_u, hx=batch_x0[None, ...]) # hx has format (num_layers=1, batch_size, hidden_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Cascaded Two-tanks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n_y = 1; n_x = 2; n_u = 1;\n",
-    "B = 1; # just one sequence\n",
-    "u = torch.randn((B, 1024, n_u)) # replace with actual training input\n",
-    "y = torch.randn((B, 1024, n_y)) # replace with actual training output"
+    "B = 1 # just one sequence\n",
+    "T = 1024\n",
+    "u = torch.randn((B, T, n_u)) # replace with actual training input\n",
+    "y = torch.randn((B, T, n_y)) # replace with actual training output"
    ]
   },
   {
@@ -143,8 +168,8 @@
    "source": [
     "x0 = torch.zeros((B, n_x), requires_grad=True) # this is also a training variable\n",
     "f_xu = NeuralStateUpdate(n_x, n_u, n_feat=32)\n",
-    "simulator = StateSpaceSimulator(f_xu) # \n",
-    "#g_x = NeuralOutput(n_x, n_y, n_feat=32) # an MLP with n_x input and n_y outputs, to be defined"
+    "g_x = NeuralOutput(n_x, n_y)\n",
+    "simulator = StateSpaceSimulator(f_xu) # "
    ]
   },
   {
@@ -155,8 +180,8 @@
    "source": [
     "opt = torch.optim.AdamW([\n",
     "        {'params': f_xu.parameters(),    'lr': 1e-3},\n",
-    "        #{'params': g_x.parameters(),    'lr': 1e-3},\n",
-    "        {'params':x0 , 'lr': 1e-3},\n",
+    "        {'params': g_x.parameters(),    'lr': 1e-3},\n",
+    "        {'params': x0 , 'lr': 1e-3},\n",
     "    ], 1e-3\n",
     ")\n",
     "#opt = torch.optim.AdamW(list(f_xu.parameters()) + list(g_x.parameters()) + [x0], 1e-3)"
@@ -168,10 +193,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "x_sim = simulator(x0, u) # B, T, n_x\n",
-    "#y_sim = g_x(x_sim) # # B, T, n_y\n",
-    "#loss = torch.nn.functional.mse_loss(y, y_sim)"
+    "y_sim = g_x(x_sim) # # B, T, n_y\n",
+    "loss = torch.nn.functional.mse_loss(y, y_sim)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
