playground minor update

--- a/Exercises/state_space/playground.ipynb
+++ b/Exercises/state_space/playground.ipynb
@@ -11,12 +11,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Utilities for neural state-space model learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Adapted from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/models.py\n",
+    "# Implements a state-update function f(x, u)\n",
     "class NeuralStateUpdate(nn.Module):\n",
     "\n",
     "    def __init__(self, n_x=2, n_u=1, n_feat=32):\n",
@@ -46,6 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adapted from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/models.py\n",
+    "# Implements the output function g(x). In fact, it is just a standard feedforward net\n",
     "class NeuralOutput(nn.Module):\n",
     "\n",
     "    def __init__(self, n_x, n_y, n_feat=32):\n",
@@ -68,6 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adapted from pytorch-ident, https://github.com/forgi86/pytorch-ident/blob/master/torchid/ss/dt/models.py\n",
+    "# Unrolls the state-update function f(x,u) over time, starting from an initial state x_0\n",
+    "\n",
     "class StateSpaceSimulator(nn.Module):\n",
     "    def __init__(self, f_xu):\n",
     "        super().__init__()\n",
@@ -112,6 +125,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simulate just one state update manually\n",
+    "B = 32\n",
+    "batch_x = torch.randn((B, n_x)) # B, n_x\n",
+    "batch_u = torch.randn((B, n_u)) # B, n_u\n",
+    "\n",
+    "batch_dx = f_xu(batch_x, batch_u) # B, n_x\n",
+    "batch_x_new = batch_x + batch_dx # B, n_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unroll f_xu over time more conveniently with the simulator\n",
     "B, T = 32, 1024; \n",
     "batch_x0 = torch.zeros((B, n_x))\n",
     "batch_u = torch.randn((B, T, n_u)) # replace with actual training input\n",
@@ -125,9 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Overall, we have defined a sort of custom RNN. In fact, it behaves pretty much like a standard LSTM\n",
-    "lstm = torch.nn.RNN(input_size=n_u, hidden_size=n_x, batch_first=True, num_layers=1)\n",
-    "batch_h, _ = lstm(batch_u)\n",
+    "# Overall, we have defined a sort of custom RNN. In fact, it behaves pretty much like a standard LSTM (with batch_first=True)\n",
+    "rnn = torch.nn.RNN(input_size=n_u, hidden_size=n_x, batch_first=True, num_layers=1)\n",
+    "batch_h, _ = rnn(batch_u) # returns both hidden sequence and last hidden layes\n",
     "batch_h.shape"
    ]
   },
@@ -137,7 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#batch_h = lstm(batch_u, hx=batch_x0[None, ...]) # hx has format (num_layers=1, batch_size, hidden_size)"
+    "batch_h, _ = rnn(batch_u, batch_x0[None, :]) # initial state has dimensions (num_layers, batch_size, hidden_size)\n",
+    "batch_h.shape"
    ]
   },
   {
@@ -153,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_y = 1; n_x = 2; n_u = 1;\n",
+    "n_y = 1; n_x = 2; n_u = 1\n",
     "B = 1 # just one sequence\n",
     "T = 1024\n",
     "u = torch.randn((B, T, n_u)) # replace with actual training input\n",
@@ -169,7 +199,7 @@
     "x0 = torch.zeros((B, n_x), requires_grad=True) # this is also a training variable\n",
     "f_xu = NeuralStateUpdate(n_x, n_u, n_feat=32)\n",
     "g_x = NeuralOutput(n_x, n_y)\n",
-    "simulator = StateSpaceSimulator(f_xu) # "
+    "simulator = StateSpaceSimulator(f_xu)"
    ]
   },
   {
@@ -178,13 +208,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = torch.optim.AdamW([\n",
-    "        {'params': f_xu.parameters(),    'lr': 1e-3},\n",
-    "        {'params': g_x.parameters(),    'lr': 1e-3},\n",
-    "        {'params': x0 , 'lr': 1e-3},\n",
-    "    ], 1e-3\n",
+    "opt = torch.optim.AdamW(\n",
+    "    [\n",
+    "        {\"params\": f_xu.parameters(), \"lr\": 1e-3},\n",
+    "        {\"params\": g_x.parameters(), \"lr\": 1e-3},\n",
+    "        {\"params\": x0, \"lr\": 1e-3},\n",
+    "    ],\n",
+    "    1e-3, # default\n",
     ")\n",
-    "#opt = torch.optim.AdamW(list(f_xu.parameters()) + list(g_x.parameters()) + [x0], 1e-3)"
+    "# opt = torch.optim.AdamW(list(f_xu.parameters()) + list(g_x.parameters()) + [x0], 1e-3)"
    ]
   },
   {
@@ -193,18 +225,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "x_sim = simulator(x0, u) # B, T, n_x\n",
     "y_sim = g_x(x_sim) # # B, T, n_y\n",
-    "loss = torch.nn.functional.mse_loss(y, y_sim)"
+    "loss = torch.nn.functional.mse_loss(y, y_sim)\n",
+    "loss"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
