--- a/Exercises/F16_exercise.ipynb
+++ b/Exercises/F16_exercise.ipynb
@@ -150,7 +150,19 @@
     "x, y = F16DS_train[idx]\n",
     "\n",
     "print(f\"Training: regressor at step {idx}: {x} \\n\")\n",
-    "print(f\"Training: output at step {idx}: {y} \\n\")\n"
+    "print(f\"Training: output at step {idx}: {y} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4ca26a3-abfa-4bc7-9b25-3968f8ae746a",
+   "metadata": {},
+   "source": [
+    "Note that the regressor $x(k)$ has the following form:\n",
+    "\n",
+    "$x(k) = [\\ y_i(k-1) \\dots y_i(k-na) \\ u_1(k) \\dots u_1(k-nb) \\ u_2(k) \\ \\dots u_2(k-nb)]$\n",
+    "\n",
+    "where $y_i$ (with $i=0,1,2$) is the output channel specified in the variable *ind_out*.  "
    ]
   },
   {
