Finished reimplementing dynonet in keras/jax.

--- a/Exercises/dynoNet_exercise.ipynb
+++ b/Exercises/dynoNet_exercise.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,6 @@
     "import torch \n",
     "import torch.nn as nn # the pytorch nn model contains all the layers we need to define a feedforward NN \n",
     "import torch.nn.functional as F\n",
-    "from torchsummary import summary\n",
     "import torch.optim as optim\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
@@ -74,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 10000, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = 2\n",
     "seq_len = 10000 # length of subsequence\n",
@@ -103,6 +110,13 @@
     "u, y = next(iter(loader_train))\n",
     "print(y.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
